Re-set whitespace to normal inside hbox children, fixes not nowrap text contents

--- a/etemplate/templates/default/etemplate2.css
+++ b/etemplate/templates/default/etemplate2.css
@@ -42,6 +42,7 @@ div.et2_hbox {
 }
 div.et2_hbox > * {
   text-align: left;
+  white-space: normal;
 }
 div.et2_hbox_left {
   float: left;
